--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
-spring.application.name=laoptopshop
+spring.datasource.url=jdbc:mysql://localhost:3306/laptopshop
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+
+
+ #config spring security
+ spring.security.user.name=nhattruong
+ spring.security.user.password=123456
+
