Implement initial application structure with user management features and JSP views

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.jpa.hibernate.ddl-auto=update
  spring.security.user.name=nhattruong
  spring.security.user.password=123456
 
+# config view engine jsp
+ #spring.mvc.view.prefix=/WEB-INF/view/
+ #spring.mvc.view.suffix=.jsp
