--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,5 +12,5 @@ spring.jpa.show-sql=true
  spring.security.user.password=123456
 
 # config view engine jsp
- #spring.mvc.view.prefix=/WEB-INF/view/
- #spring.mvc.view.suffix=.jsp
+# pring.mvc.view.prefix=/WEB-INF/view/
+# spring.mvc.view.suffix=.jsp
