--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,9 @@ spring.jpa.show-sql=true
 # config view engine jsp
 # pring.mvc.view.prefix=/WEB-INF/view/
 # spring.mvc.view.suffix=.jsp
+
+
+#default = 1MB
+spring.servlet.multipart.max-file-size=50MB
+#default = 10 MB (form data)
+spring.servlet.multipart.max-request-size=50MB
