--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,9 @@ spring.datasource.url=jdbc:mysql://localhost:3306/laptopshop
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.messages.encoding=UTF-8
+spring.web.encoding.charset=UTF-8
+spring.web.encoding.force=true
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
